// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders correcty with buttonType prop 1`] = `
<div>
  <button
    class="flex flex-row gap-x-4 items-center justify-center select-none transition-all disabled:pointer-events-none disabled:opacity-70 disabled:shadow-none disabled:cursor-not-allowed bg-primary text-bkg-frg hover:bg-primary/90 text-base py-2 px-4 rounded-md"
  />
</div>
`;

exports[`Button > renders correcty with buttonType prop 2`] = `
<div>
  <button
    class="flex flex-row gap-x-4 items-center justify-center select-none transition-all disabled:pointer-events-none disabled:opacity-70 disabled:shadow-none disabled:cursor-not-allowed bg-secondary text-secondary-frg hover:bg-secondary/90 text-base py-2 px-4 rounded-md"
  />
</div>
`;

exports[`Button > renders correcty with buttonType prop 3`] = `
<div>
  <button
    class="flex flex-row gap-x-4 items-center justify-center select-none border transition-all disabled:pointer-events-none disabled:opacity-70 disabled:shadow-none disabled:cursor-not-allowed text-base py-2 px-4 rounded-md"
  />
</div>
`;
